<?xml version="1.0"?>
<package format="2">
  <name>hear_navio_mc_example</name>
  <version>0.0.0</version>
  <description>The HEAR_Navio_FC package</description>
  <maintainer email="mohamad.wahbah@outlook.com">moawahbah</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hear_ros_bridge</depend>
  <depend>roscpp</depend>
  <export>
  </export>
</package>